[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/player/SkillContainer.gd" type="Script" id=1]
[ext_resource path="res://assets/gui/player/skills_dynamicfont.tres" type="DynamicFont" id=2]

[node name="PanelContainer" type="PanelContainer"]
margin_right = 277.0
margin_bottom = 37.0
script = ExtResource( 1 )

[node name="SkillContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 270.0
margin_bottom = 30.0
custom_constants/separation = 14

[node name="SkillName" type="Label" parent="SkillContainer"]
margin_right = 209.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "DAMAGE REDUCTION"

[node name="SkillValue" type="Label" parent="SkillContainer"]
margin_left = 223.0
margin_right = 237.0
margin_bottom = 23.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="Label" type="Label" parent="SkillContainer"]
margin_left = 251.0
margin_right = 263.0
margin_bottom = 23.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "%"
